@@ -63,7 +63,7 @@
 		</table>
 		<table class="pub dataset">
 			<tr>
-				<th>IATI Datasets <span class="note">(opens external site in new window)</span></th>
+				<th>IATI Datasets <span class="note">(links open external sites in new window)</span></th>
 				<th>Activities</th>
 			</tr>
 			{dash_list_slug_datas}
@@ -117,3 +117,4 @@ table.pub.dataset th		{border-bottom:1px solid #ccc;}
 
 a.back_link.dash			{margin-right:20px; text-align:right; margin-top:40px;}
 .note						{font-style:italic; font-weight:initial;}
+.note.div					{font-size:0.65em; padding-top:5px; line-height:1.2em;}
