@@ -1,8 +1,9 @@
-Development Portal (2014-06-19 shi)
+Dashboard (2014-06-19 shi)
 ==============================
 CSS cleanup
-Dash layouts for new columns
+Layouts for new columns
 More tables for more tables
+Added links to country codes
 
 
 Development Portal (2014-06-18 shi)
